istio/RequestRouting/2-virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  namespace: on-premise
  name: vs-web-app
spec:
  hosts:
    - "*"
  gateways:
    - ingress-gateway-configuration.istio-system.svc.cluster.local
  http:
    - match:
    # CASE
      - headers:  
          x-custom-header:
            exact: dark
    # THEN
      route: 
      - destination:
          host: service-web-app.on-premise.svc.cluster.local
          subset: beta
      # BREAK

    # DEFAULT
    - route:
      - destination:
          host: service-web-app.on-premise.svc.cluster.local
          subset: production
