istio/RequestRouting/3-destination-rule.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  namespace: on-premise
  name: ds-service-web-app
spec:
  host: service-web-app.on-premise.svc.cluster.local
  subsets:
    - labels:
        version: production
      name: production
    - labels:
        version: beta
      name: beta
