istio/RequestRouting/3-enable-tls-destination-rule.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  namespace: on-premise
  name: ds-service-web-app
  labels:
    kiali_wizard: matching_routing
spec:
  host: service-web-app.on-premise.svc.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - labels:
        version: production
      name: production
    - labels:
        version: beta
      name: beta
