istio/RequestRouting/3-virtual-service.yaml
kind: DestinationRule
apiVersion: networking.istio.io/v1alpha3
metadata:
  namespace: on-premise
  name: service-web-app
spec:
  host: service-web-app.on-premise.cluster.local
  trafficPolicy:
    tls:
      mode: ISTIO_MUTUAL
  subsets:
    - labels:
        version: production
      name: production
    - labels:
        version: beta
      name: beta
